[gd_scene load_steps=29 format=3 uid="uid://b5c8708romg66"]

[ext_resource type="Script" uid="uid://cwfb11xi28hea" path="res://playerFolder/playerScripts/player_script.gd" id="1_cbnsr"]
[ext_resource type="PackedScene" uid="uid://b0py0r48mo2wi" path="res://playerFolder/camera_manager.tscn" id="3_olns3"]
[ext_resource type="Texture2D" uid="uid://dnadcguif2xdk" path="res://playerFolder/playerSprites/shadowPixel.png" id="3_opa1r"]
[ext_resource type="AudioStream" uid="uid://bdhakvk1lh7cu" path="res://playerFolder/playerSounds/jumpSoundEffect.wav" id="4_w4nnb"]
[ext_resource type="Texture2D" uid="uid://vn6tav3ndfqw" path="res://playerFolder/playerSprites/Sprite-0001-Sheet.png" id="4_y3gru"]
[ext_resource type="PackedScene" uid="uid://chgbc048ycjqu" path="res://Level1/level1Soundtrack/music_manager.tscn" id="5_6sxll"]
[ext_resource type="PackedScene" uid="uid://bkiexs3do8yr0" path="res://playerFolder/playerAttacks/special_attack1.tscn" id="5_cbnsr"]
[ext_resource type="Script" uid="uid://b0ljh2wldvrnc" path="res://playerFolder/movement_component.gd" id="7_y3gru"]
[ext_resource type="Script" uid="uid://chomcjympu1mj" path="res://playerFolder/jump_component.gd" id="9_a8wlk"]
[ext_resource type="AudioStream" uid="uid://c0fokvn508fgs" path="res://playerFolder/playerSounds/landSoundEffect.wav" id="10_sxhot"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qsbax"]
radius = 5.0
height = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_opa1r"]
size = Vector2(51, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4nnb"]
atlas = ExtResource("4_y3gru")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbnsr"]
atlas = ExtResource("4_y3gru")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8wlk"]
atlas = ExtResource("4_y3gru")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxhot"]
atlas = ExtResource("4_y3gru")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l8vr"]
atlas = ExtResource("4_y3gru")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hneyv"]
atlas = ExtResource("4_y3gru")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2vfy"]
atlas = ExtResource("4_y3gru")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qyj71"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4nnb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbnsr")
}],
"loop": true,
"name": &"lightAttack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8wlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxhot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l8vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hneyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2vfy")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_cbnsr"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_w4nnb"]
resource_name = "deathAnimation"

[sub_resource type="Animation" id="Animation_a8wlk"]
resource_name = "hurtAnim"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.005, 0, 0, 0, 1, -0.028333334, 0, 0, 0),
"times": PackedFloat32Array(0, 0.03, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.019607844, -0.005, 0.1633987, 0, 0, 1, -0.028333334, -0.1633987, 0, 0),
"times": PackedFloat32Array(0, 0.03, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.02745098, -0.005, 0.1620915, 0, 0, 1, -0.028333334, -0.16209151, 0, 0),
"times": PackedFloat32Array(0, 0.03, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.54509807, -0.005, 0.07581699, 0, 0, 1, -0.028333334, -0.075817, 0, 0),
"times": PackedFloat32Array(0, 0.03, 0.2)
}

[sub_resource type="Animation" id="Animation_6sxll"]
resource_name = "parry"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.35, -0.065179326, 0.022064866, 0, 0, 0.35, -0.065179326, 0.022064866, 0, 0, 1, -0.014606839, -0.007552127, 0, 0),
"times": PackedFloat32Array(0, 0.05, 0.4, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.8, -0.065179326, 0.022963107, 0, 0, 0.8, -0.065179326, 0.022963107, 0, 0, 1, -0.014606839, 0, 0, 0),
"times": PackedFloat32Array(0, 0.05, 0.4, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.065179326, -0.08649132, 0, 0, 1, -0.065179326, -0.08649132, 0, 0, 1, -0.014606839, -0.080175355, 0, 0),
"times": PackedFloat32Array(0, 0.05, 0.4, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.065179326, 0, 0, 0, 1, -0.065179326, 0, 0, 0, 1, -0.014606839, 0, 0, 0),
"times": PackedFloat32Array(0, 0.05, 0.4, 0.5)
}

[sub_resource type="Animation" id="Animation_sxhot"]
resource_name = "spawnIn"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.083333336, -0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_y3gru"]
resource_name = "specialAttack"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.55, 0.76666665, 1, 1.1999999, 1.4333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"values": [{
"args": [ExtResource("5_cbnsr"), 10.0, 0.0, 0.05, 0.0],
"method": &"spawnAttack"
}, {
"args": [ExtResource("5_cbnsr"), 10.0, 0.0, 0.05, 0.0],
"method": &"spawnAttack"
}, {
"args": [ExtResource("5_cbnsr"), 10.0, 0.0, 0.05, 0.0],
"method": &"spawnAttack"
}, {
"args": [ExtResource("5_cbnsr"), 10.0, 0.0, 0.05, 0.0],
"method": &"spawnAttack"
}, {
"args": [ExtResource("5_cbnsr"), 10.0, 0.0, 0.05, 0.0],
"method": &"spawnAttack"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6666667, 0.9, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"flipDirection"
}, {
"args": [],
"method": &"flipDirection"
}, {
"args": [],
"method": &"flipDirection"
}, {
"args": [],
"method": &"flipDirection"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.7, 0.93333334, 1.1333333, 1.3333335, 1.4666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"specialAttackTP"
}, {
"args": [],
"method": &"specialAttackTP"
}, {
"args": [],
"method": &"specialAttackTP"
}, {
"args": [],
"method": &"specialAttackTP"
}, {
"args": [],
"method": &"specialAttackTP"
}, {
"args": [],
"method": &"specialAttackDone"
}]
}

[sub_resource type="Animation" id="Animation_8l8vr"]
resource_name = "victory"
length = 5.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(1, 0, 0, 0.5, -0.16666667, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(1, 0, 0, 0.5, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(1, 0, 0, 0.5, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("playerBody/hitBox/playerSprite:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(0.9764706, 0, 0, 0.5, -0.1627451, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3gru"]
_data = {
&"RESET": SubResource("Animation_cbnsr"),
&"deathAnimation": SubResource("Animation_w4nnb"),
&"hurtAnim": SubResource("Animation_a8wlk"),
&"parry": SubResource("Animation_6sxll"),
&"spawnIn": SubResource("Animation_sxhot"),
&"specialAttack": SubResource("Animation_y3gru"),
&"victory": SubResource("Animation_8l8vr")
}

[node name="playerBody" type="CharacterBody2D"]
script = ExtResource("1_cbnsr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_qsbax")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
z_index = 4096
offset_left = -25.0
offset_top = -100.0
offset_right = 58.0
offset_bottom = -50.0
theme_override_font_sizes/normal_font_size = 8
text = "blehhghg"
scroll_active = false
autowrap_mode = 0

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.58431375)
self_modulate = Color(1, 1, 1, 0.78039217)
texture_filter = 1
position = Vector2(0, -10)
scale = Vector2(2.2, 1)
texture = ExtResource("3_opa1r")

[node name="hitBox" type="Node2D" parent="."]
unique_name_in_owner = true
z_as_relative = false

[node name="playerHitbox" type="Area2D" parent="hitBox"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox/playerHitbox"]
position = Vector2(0.5, -30)
shape = SubResource("RectangleShape2D_opa1r")
debug_color = Color(0, 0.5930971, 0.73992854, 0.41960785)

[node name="playerSprite" type="AnimatedSprite2D" parent="hitBox"]
visible = false
position = Vector2(1, -33)
sprite_frames = SubResource("SpriteFrames_qyj71")
animation = &"idle"

[node name="musicManager" parent="." instance=ExtResource("5_6sxll")]

[node name="playerActionAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_y3gru")
}

[node name="cameraController" parent="." instance=ExtResource("3_olns3")]

[node name="Timers" type="Node" parent="."]

[node name="AttackBusyTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="ComboTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="StunTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 100.0
one_shot = true

[node name="ParryTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="ParryCooldownTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="MovementComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_y3gru")
walk_acceleration = 800.0
_x_walk_speed = 400.0
_y_walk_speed = 200.0
metadata/_custom_type_script = "uid://b0ljh2wldvrnc"

[node name="JumpComponent" type="Node" parent="." node_paths=PackedStringArray("nodes_to_move")]
script = ExtResource("9_a8wlk")
nodes_to_move = [NodePath("../hitBox")]
jump_velocity = 100.0
vertical_acceleration = -100.0
metadata/_custom_type_script = "uid://chomcjympu1mj"

[node name="Sounds" type="Node2D" parent="."]

[node name="JumpSound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("4_w4nnb")
max_polyphony = 4
bus = &"playerBus"

[node name="LandSound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("10_sxhot")
volume_db = -15.0
max_polyphony = 4
bus = &"playerBus"
